--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,15 +67,11 @@ jobs:
         env:
           PING_URL: ${{ secrets.PING_URL }}
 
-      - name: Generate
-        run: |
-          echo "Temp" >> ./temp.txt
-      - name: Keep
-        uses: stefanzweifel/git-auto-commit-action@v4
-        with:
-          branch: keep
-          skip_checkout: true
-          skip_dirty_check: true
-          push_options: '--force'
-          file_pattern: ./temp.txt
-          commit_message: Bump
+  keepalive:
+    runs-on: ubuntu-latest
+    permissions:
+      actions: write
+      contents: read
+    steps:
+      - uses: actions/checkout@v4
+      - uses: gautamkrishnar/keepalive-workflow@v2
